# MAT3008

./: .gitignore  README.md
hw1/: CMakeLists.txt  README.md  machar.c  machar_double.c  main.c
hw10/: CMakeLists.txt  main.cpp
hw2/: 3_6.c  4_12.c  4_2.c  4_5.c  CMakeLists.txt  README.md  main.c
hw3/: .gitignore  CMakeLists.txt  main.c  problem0.c  problem1.c  problem2.c  problem3.c  rtbis.c  rtnewt.c  run_funcs.c  run_funcs.h
hw4/: CMakeLists.txt  main.c  problem1.c  problem2.c  problem3.c  run_funcs.c  run_funcs.h
hw5/: CMakeLists.txt  main.c
hw6/: CMakeLists.txt  draw_graph.py  draw_histogram.py  main.c
hw7/: CMakeLists.txt  main.c
hw8/: CMakeLists.txt  main.cpp
hw9/: CMakeLists.txt  main.c
